# wsjtx_lib_nodejs

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  PUBLISHING.md  README.md  WINDOWS_BUILD.md  build_mingw.sh  package-lock.json  package.json  test-windows-build.bat  tsconfig.json  vcpkg.json  修复报告_更新.md
.github/workflows/: build.windows.yml  build.yml
docs/: prebuilt-bundling.md  windows-msvc-implementation.md
examples/: examples.ts
native/: wsjtx_bridge.h  wsjtx_c_api.cpp  wsjtx_c_api.h  wsjtx_wrapper.cpp  wsjtx_wrapper.h
scripts/: build-windows-msvc.ps1  ci-helpers.sh  create-release.sh  package-prebuilds.js
src/: index.ts  types.ts
test/: wsjtx.basic.test.ts  wsjtx.test.ts
wsjtx_bridge/: CMakeLists.txt  wsjtx_bridge.cpp  wsjtx_bridge.h
